fixed aligning of close and added planets dropdown

--- a/client/src/assets/ModalStyle.css
+++ b/client/src/assets/ModalStyle.css
@@ -5,4 +5,19 @@
     width: 50%;
     height: 70%;
     background-color:rgba(255, 255, 255, .7);
+    display: flex;
+    font-family: sans-serif;
+    justify-content: center;
+    box-shadow: 0 0 32px rgba(0, 0, 0, .5);
+}
+.closeModal{
+    background: linear-gradient(45deg, gray 50%, gray 90%);
+    border-radius: 5;
+    border:  0;
+    color: 'white';
+    height: 5%;
+    width: 5%;
+    padding: 0 20px;
+    box-shadow: 0 3px 5px 2px rgba(205, 155, 155, .3);
+    right: 53.4%;
 }
